Fix width and spacing between cards

--- a/05_04/style-main.css
+++ b/05_04/style-main.css
@@ -243,12 +243,18 @@ Card grid:
 
 @supports (grid-area: auto) {
 
+	@media screen and (min-width: 50em) { .cards {display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 1em}
+
+	.card {margin-bottom: 0;}
+		
+	}
+
 .card a {display: grid; grid-template-columns: 6em auto; grid-template-rows: 1fr 1fr; padding: 0; text-align: left;}
 
 }
 
 .time {grid-column: 1; grid-row: 1/3; display: flex; flex-direction: column; align-items: center; justify-content: center;}
 
-.card h2 {grid-column: 2; grid-row: 1;}
+.card h2 {grid-column: 2; grid-row: 1; align-self: flex-end;}
 
 .meta {grid-column: 2; grid-row: 2;}
